Improving Log Agent Performance by Switching to Coroutine and Monitoring Active Log #739 (#740)
* The file module needs to add a few performance-related unit tests. #731

* Improving Log Agent Performance by Switching to Coroutine and Monitoring Active Log #739